# Auditeo-AI

./: .gitignore  README.md  llm.txt  prompt_traces.txt  pyproject.toml  streamlit_app.py
src/auditeo_ai/: __init__.py  main.py
src/auditeo_ai/api/routes/: audit.py
src/auditeo_ai/config/: llms.py
src/auditeo_ai/crews/insights/: insights_crew.py
src/auditeo_ai/crews/insights/config/: agents.yaml  tasks.yaml
src/auditeo_ai/flows/: audit.py  audit_flow.py
src/auditeo_ai/models/: __init__.py  execution.py  insights.py  metrics.py  schemas.py
src/auditeo_ai/tools/: scraper_tool.py
src/auditeo_ai/utils/: __init__.py  generate_report.py
wiki/: API.md
