[project]
name = "auditeo-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Isuru Weerasingha", email = "info.isweerasingha@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "crewai>=1.11.0",
    "crewai-tools>=1.11.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.10.1",
]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
